# solar-forecast

./: .gitignore  DEPLOY.md  DEPLOY_HUGGINGFACE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: keep-alive.yml  tests.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MATH.md  ML_PLAN.md  PHYSICS.md  RESEARCH.md  UNDERSTAND.md
reports/: default_backtest.json
sample_data/: default_2023.csv
src/solar_forecast/: __init__.py  cli.py  config.py  data.py  evaluate.py  features.py  models.py  physics.py  plots.py
tests/: test_data_features.py  test_evaluate.py  test_models.py  test_physics.py
